--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--my style-->
     <link rel="stylesheet" href="style.css" />
-    <title>Kopi Senja</title>
+    <title>Company profile</title>
   </head>
   <body>
     <!--navbar star-->
